--- a/AUTHORS
+++ b/AUTHORS
@@ -63,6 +63,8 @@ Further patches have been submitted by:
   Fred Leeflang <fredl-at-dutchie-dot-org>
   Jon Nordby <jononor-at-gmail-dot-com>
   Ales Zelinka <azelinka-at-redhat.com>
+  Jan ONDREJ <ondrejj-at-salstar-dot-sk>
+  Marc Deslauriers <marc.deslauriers-at-ubuntu-dot-com>
 
   <...send a patch & get your name here...>
 
