keyring: Fix default keyring usage

--- a/AUTHORS
+++ b/AUTHORS
@@ -65,6 +65,7 @@ Further patches have been submitted by:
   Ales Zelinka <azelinka-at-redhat.com>
   Jan ONDREJ <ondrejj-at-salstar-dot-sk>
   Marc Deslauriers <marc.deslauriers-at-ubuntu-dot-com>
+  Matthias Fulz <olz1983-at-googlemail-dot-com>
 
   <...send a patch & get your name here...>
 
