l10n: Updates to Japanese (ja) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/ja.po
+++ b/po/ja.po
@@ -8,12 +8,13 @@
 # Hyu_gabaru Ryu_ichi <hyu_gabaru@yahoo.co.jp>, 2007.
 # Kiyoto Hashida <khashida@redhat.com>, 2008, 2009, 2010.
 # Hajime Taira <htaira@redhat.com>, 2010.
+# Shushi Kurose <md81bird@hitaki.net>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-04-27 11:50-0400\n"
-"PO-Revision-Date: 2010-07-02 16:39+0900\n"
+"PO-Revision-Date: 2010-07-02 16:55+0900\n"
 "Last-Translator: Hajime Taira <htaira@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2505,10 +2506,12 @@ msgstr "Powered by libvirt"
 #: ../src/vmm-about.glade.h:4
 msgid "translator-credits"
 msgstr ""
-"Noriko Mizumoto， noriko@redhat.com, 2006, 2007.\n"
-"kiyoto james hashida， khashida@redhat.com, 2007.2008.\n"
-"Hyu_gabaru Ryu_ichi， hyu_gabaru@yahoo.co.jp, 2007.\n"
-"Shushi Kurose， md81bird@hitaki.net, 2010."
+"Noriko Mizumoto， <noriko@redhat.com>, 2006, 2007.\n"
+"kiyoto james hashida,  <khashida@redhat.com>, 2007.2008.\n"
+"Hyu_gabaru Ryu_ichi,  <hyu_gabaru@yahoo.co.jp>, 2007.\n"
+"Kiyoto Hashida,  <khashida@redhat.com>, 2008, 2009, 2010.\n"
+"Hajime Taira,  <htaira@redhat.com>, 2010.\n"
+"Shushi Kurose,  <md81bird@hitaki.net>, 2010."
 
 #: ../src/vmm-add-hardware.glade.h:1
 msgid "<b>Character Device</b>"
@@ -4044,7 +4047,7 @@ msgstr "表示(_V)"
 #: ../src/vmm-details.glade.h:135
 #: ../src/vmm-host.glade.h:56
 msgid "_View Manager"
-msgstr "マネージャーを表示(_V)"
+msgstr "仮想マシンマネージャーを表示(_V)"
 
 #: ../src/vmm-host.glade.h:1
 msgid "<b>Basic details</b>"
