Remove superfluous word in german translation file.
* There was a superflous word in the german translation.
  The checkbox "Enable APIC" in a virtual machine's
  "Overview" -> "Machine Settings" screen reads
  "APIC aktivierenAudio" instead of "APIC aktivieren".

--- a/po/de.po
+++ b/po/de.po
@@ -3753,7 +3753,7 @@ msgstr "A_CPI aktivieren:"
 
 #: ../src/vmm-details.glade.h:47
 msgid "Enable A_PIC:"
-msgstr "A_PIC aktivierenAudio:"
+msgstr "A_PIC aktivieren:"
 
 #: ../src/vmm-details.glade.h:48
 msgid "Finish Install"
