l10n: Updates to Marathi (mr) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/mr.po
+++ b/po/mr.po
@@ -9,10 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-03-29 15:04+0530\n"
-"PO-Revision-Date: 2010-04-08 12:39+0530\n"
+"POT-Creation-Date: 2010-03-24 11:50-0400\n"
+"PO-Revision-Date: 2010-07-26 15:58+0530\n"
 "Last-Translator: Sandeep Shedmake <sshedmak@redhat.com>\n"
-"Language-Team: Marathi <maajhe-sanganak@freelists.org>\n"
+"Language-Team: Marathi <fedora-trans-mr@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1212,8 +1212,8 @@ msgstr ""
 "\n"
 "%s\n"
 "\n"
-"यांचा वापर केल्यास अस्तित्वातील संरचना खोडून पुनः लिहले जातील. तुम्हाला नक्की नीवडलेले संवाद "
-"वापरायचे?"
+"यांचा वापर केल्यास अस्तित्वातील संरचना खोडून पुनः लिहले जातील. तुम्हाला नक्की नीवडलेले "
+"संवाद वापरायचे?"
 
 #: ../src/virtManager/createinterface.py:1006
 msgid "Error setting interface parameters."
@@ -1821,7 +1821,7 @@ msgstr "अपरिचीत जुळवणी URI %s"
 #. FIXME: This should work with remote storage stuff
 #: ../src/virtManager/engine.py:712
 msgid "Saving virtual machines over remote connections is not yet supported."
-msgstr "दूर्रस्थ जुळवणी वरील वर्च्युअल मशीन संचयन करीता अजूनही समर्थीत नाही."
+msgstr "रिमोट जोडणीवरील वर्च्युअल मशीन्स् यांना साठवणे समर्थीत नाही."
 
 #: ../src/virtManager/engine.py:719
 msgid "Save Virtual Machine"
@@ -2475,9 +2475,9 @@ msgid ""
 "default pointer in the virtual machine) will ensure the virtual cursor moves "
 "in sync with the local desktop cursor.</small>"
 msgstr ""
-"<small><b>टिप:</b>ग्राफिकल टॅबलेट (व त्यास वर्च्युअल मशीन अंतर्गत पूर्वनिर्धारीत पॉईन्टर नुरूप "
-"संयोजीत केल्यास) वर्च्युअल कर्सर स्थानीय डेस्कटॉप कर्सरसह समरित्या हलतो याची खात्री करतो.</"
-"small>"
+"<small><b>टिप:</b>ग्राफिकल टॅबलेट (व त्यास वर्च्युअल मशीन अंतर्गत पूर्वनिर्धारीत पॉईन्टर "
+"नुरूप संयोजीत केल्यास) वर्च्युअल कर्सर स्थानीय डेस्कटॉप कर्सरसह समरित्या हलतो याची खात्री "
+"करतो.</small>"
 
 #: ../src/vmm-add-hardware.glade.h:6
 msgid ""
@@ -2535,7 +2535,9 @@ msgstr ""
 msgid ""
 "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Watchdog "
 "Device</span>"
-msgstr "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">वॉचडॉग साधण</span>"
+msgstr ""
+"<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">वॉचडॉग साधण</"
+"span>"
 
 #: ../src/vmm-add-hardware.glade.h:16
 msgid "A_utomatically allocated"
@@ -4012,7 +4014,7 @@ msgstr "VM च्या आकारप्रमाणे करा (_R)"
 
 #: ../src/vmm-details.glade.h:127
 msgid "_Save"
-msgstr "सुरक्षित करा(_S)"
+msgstr "साठवा (_S)"
 
 #: ../src/vmm-details.glade.h:128
 msgid "_Save this password in your keyring"
@@ -4458,7 +4460,7 @@ msgstr ""
 
 #: ../src/vmm-preferences.glade.h:25
 msgid "Poweroff/_Reboot:"
-msgstr "पावरऑफ/पुनः सुरू करा (_R):"
+msgstr "संपूर्णपणे बंद करा/पुनः सुरू करा (_R):"
 
 #: ../src/vmm-preferences.glade.h:26
 msgid "Preferences"
