--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,15 @@
 # Decroux Fabien <fdecroux@redhat.com>, 2006.
 # Gauthier Ancelin <gauthier.ancelin@laposte.net>, 2007, 2008.
 # Laurent Léonard <laurent@open-minds.org>, 2009, 2010.
+# Boris BARNIER <b.barnier@gmail.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: virt-manager.tip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-24 11:50-0400\n"
-"PO-Revision-Date: 2010-05-12 05:18+0200\n"
-"Last-Translator: Laurent Léonard <laurent@open-minds.org>\n"
-"Language-Team: fr <fedora-trans-fr@redhat.com>\n"
+"PO-Revision-Date: 2010-08-03 19:15+0200\n"
+"Last-Translator: Boris BARNIER <b.barnier@gmail.com>\n"
+"Language-Team: French <trans-fr@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2535,12 +2536,13 @@ msgstr "Propulsé par libvirt"
 #: ../src/vmm-about.glade.h:4
 msgid "translator-credits"
 msgstr ""
-"Damien Durand <splinux@fedoraproject.org>\n"
-"Thomas Canniot <thomas.canniot@laposte.net>\n"
-"Alain PORTAL <aportal@univ-montp2.fr>\n"
-"Decroux Fabien <fdecroux@redhat.com>\n"
-"Gauthier Ancelin <gauthier.ancelin@laposte.net>\n"
-"Laurent Léonard <laurent@open-minds.org>"
+"Damien Durand <splinux@fedoraproject.org>, 2006."
+"Thomas Canniot <thomas.canniot@laposte.net>, 2006, 2007."
+"Alain PORTAL <aportal@univ-montp2.fr>, 2006, 2007."
+"Decroux Fabien <fdecroux@redhat.com>, 2006."
+"Gauthier Ancelin <gauthier.ancelin@laposte.net>, 2007, 2008."
+"Laurent Léonard <laurent@open-minds.org>, 2009, 2010."
+"Boris BARNIER <b.barnier@gmail.com>, 2010."
 
 #: ../src/vmm-add-hardware.glade.h:1
 msgid "<b>Character Device</b>"
@@ -3150,7 +3152,7 @@ msgstr "Tag _VLAN :"
 
 #: ../src/vmm-create-interface.glade.h:44
 msgid "ip desc"
-msgstr ""
+msgstr "desc ip"
 
 #: ../src/vmm-create-interface.glade.h:45 ../src/vmm-preferences.glade.h:38
 msgid "seconds"
