--- a/AUTHORS
+++ b/AUTHORS
@@ -66,6 +66,7 @@ Further patches have been submitted by:
   Jan ONDREJ <ondrejj-at-salstar-dot-sk>
   Marc Deslauriers <marc.deslauriers-at-ubuntu-dot-com>
   Matthias Fulz <olz1983-at-googlemail-dot-com>
+  Niels de Vos <ndevos-at-redhat-dot-com>
 
   <...send a patch & get your name here...>
 
